--- a/index.html
+++ b/index.html
@@ -1,24 +1,58 @@
 $def with (orders)
 
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Orders</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body>
-    <table>
-      $for order in orders:
-      <tr>
-        <td>$order.name</td>
-        <td>$order.address</td>
-        <td>$order.email</td>
-        <td>
-          <ul>
-          $for item in order.items:
-            <li>$item.title ($item.price) * $item.quantity</li>
-          </ul>
-        </td>
-      </tr>
-    </table>
-    
+    <h1>Orders</h1>
+
+    <div class="container">
+      <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <td>Name</td>
+            <td>Address</td>
+            <td>Email</td>
+            <td>Items</td>
+          </tr>
+        </thead>
+        $for order in orders:
+        <tr>
+          <td>$order.name</td>
+          <td>$order.address</td>
+          <td>$order.email</td>
+          <td>
+            <ul class="list-group">
+              $for item in order.items:
+                <li class="list-group-item">
+                  <span class="badge">$item.quantity</span>
+                  $item.title ($item.price)
+                </li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   </body>
 </html>
